objects/EOF_VLAN__c.object
<CustomObject>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>VLAN</relationshipLabel>
        <relationshipName>VLAN1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_NomeKit_From_Coll__c</fullName>
        <formula>IF (ISBLANK(Caso__r.PO_KIT_Consegna_VLAN__c) , Caso__r.kit_in_condivisione__r.PO_PP_NomeKit__c, 
    Caso__r.PO_KIT_Consegna_VLAN__r.PO_PP_NomeKit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_NomeKit_From_Coll</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_COS1_CIR__c</fullName>
        <externalId>true</externalId>
        <label>COS1_CIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_COS1_PIR__c</fullName>
        <externalId>true</externalId>
        <label>COS1_PIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_COS3_CIR__c</fullName>
        <externalId>true</externalId>
        <label>COS3_CIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_COS3_PIR__c</fullName>
        <externalId>true</externalId>
        <label>COS3_PIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_COS5_CIR__c</fullName>
        <externalId>true</externalId>
        <label>COS5_CIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_COS5_PIR__c</fullName>
        <externalId>true</externalId>
        <label>COS5_PIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_COS_Class__c</fullName>
        <label>COS-Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_COS_Remarking__c</fullName>
        <label>COS Remarking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_DHCP_Option82__c</fullName>
        <label>DHCP Option82</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_KIT_di_consegna_VLAN__c</fullName>
        <label>KIT di consegna VLAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Modello_di_Servizio__c</fullName>
        <label>Modello di Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Opzione__c</fullName>
        <label>Opzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Flexible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Profilo__c</fullName>
        <label>Profilo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3Play</fullName>
                </value>
                <value>
                    <fullName>Voce e Dati</fullName>
                </value>
                <value>
                    <fullName>Solo Dati</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_SVLAN_Traslation__c</fullName>
        <label>SVLAN Traslation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_User_VLAN__c</fullName>
        <label>User_VLAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Velocita_di_Banda__c</fullName>
        <label>PO_Velocita_di_Banda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVLANID__c</fullName>
        <label>SVLANID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VLAN</label>
    <nameField>
        <displayFormat>VLAN-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VLANs</pluralLabel>
    <recordTypes>
        <fullName>OF_VLAN_EAccess</fullName>
        <active>true</active>
        <label>OF_VLAN_EAccess</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_VLAN_ELine</fullName>
        <active>true</active>
        <label>OF_VLAN_ELine</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>